# 236p1test

./: Automaton.h  CMakeLists.txt  CommentAutomaton.cpp  Lexer.cpp  StringAutomaton.cpp  main.cpp  test.txt
